--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "aws-sdk": "^2.607.0",
+    "dotenv": "^8.2.0",
     "pdfobject": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
