--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "aws-sdk": "^2.607.0",
     "axios": "^0.19.1",
     "dotenv": "^8.2.0",
-    "aws-sdk": "^2.607.0",
     "pdfobject": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -16,7 +16,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
