--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "aws-sdk": "^2.607.0",
     "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "pdfobject": "^2.1.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-pdf": "^4.1.0",
     "react-redux": "^7.1.3",
