--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "git checkout master && npm run build && aws s3 sync build/ s3://accordant-react"
+    "deploy": "git checkout master && npm run build && aws s3 sync build/ s3://accordanthelp-react"
   },
   "eslintConfig": {
     "extends": "react-app"
