changed method of getting admin status to use redux

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_EXPRESS2=http://localhost:3001
-REACT_APP_EXPRESS=https://accordanthelp.herokuapp.com/
+REACT_APP_EXPRESS=http://localhost:3001
+REACT_APP_EXPRES2=https://accordanthelp.herokuapp.com/
